fix: z-index

--- a/Hero Sections/space/assets/css/styles.css
+++ b/Hero Sections/space/assets/css/styles.css
@@ -259,7 +259,6 @@ img {
 
 .home__rocket {
   width: 220px;
-  z-index: 10;
 }
 
 .home__planet-1 {
@@ -279,6 +278,7 @@ img {
   position: absolute;
   bottom: 0;
   max-width: initial;
+  z-index: -10;
 }
 
 .home__cloud-2 {
@@ -384,7 +384,6 @@ img {
   .home__container {
     grid-template-columns: 460px 650px;
     align-items: center;
-    z-index: 5;
   }
 
   .home__subtitle {
